ghc-4335c07/testsuite/tests/module/mod134.hs
-- Test that 'hiding' hides the qualified name too

module Main where
import Prelude hiding (head)

main  = do print (Prelude.head [0..])
           head

head = print "head"
